--- a/vr-next/package.json
+++ b/vr-next/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^3.0.0",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
     "next": "14.2.5",
+    "openai": "^4.56.0",
     "pdf-parse": "^1.1.1",
+    "pinecone-client": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "replicate": "^0.32.0",
     "three": "^0.167.0"
   },
