--- a/vr-next/package.json
+++ b/vr-next/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "openai": "^4.56.0",
     "pdf-parse": "^1.1.1",
